CMAKE_MINIMUM_REQUIRED(VERSION 2.7)

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(/usr/local/lib/python2.7/site-packages/numpy/core/include)

#SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(mylivewire.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(mylivewire.i PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(mylivewire python mylivewire.i mylivewire.cxx)
SWIG_LINK_LIBRARIES(mylivewire ${PYTHON_LIBRARIES})